style: add margin bottom for article shortcode elements

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -38,6 +38,15 @@ article header .author {
 }
 
 /* ========================================
+   Article Shortcode
+   ======================================== */
+
+article section article {
+    margin-bottom: 40px !important;
+}
+
+
+/* ========================================
    Social Icons
    ======================================== */
 
