refactor: move amazon.css to assets and use Hugo asset pipeline
- Move amazon.css from static/css/ to assets/css/ for better asset processing
- Update amazon.html shortcode to use Hugo resources.Get and minification
- Enable CSS optimization and minification through Hugo asset pipeline

--- a/layouts/shortcodes/amazon.html
+++ b/layouts/shortcodes/amazon.html
@@ -1,5 +1,6 @@
 {{/* Amazon Product Shortcode - Simple and Clean Design with Fallback */}}
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/amazon.css">
+{{ $amazonCSS := resources.Get "css/amazon.css" | resources.Minify }}
+<link rel="stylesheet" href="{{ $amazonCSS.RelPermalink }}">
 
 {{- $tag := .Site.Params.amazonJpAffiliate -}}
 {{- $asin := .Get "asin" -}}
