--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -225,6 +225,11 @@
     margin-bottom: 1rem !important;
 }
 
+/* Add margin after tags in card list */
+#main-content > section > section div.text-sm.text-neutral-500.dark\:text-neutral-400 {
+    margin-bottom: 6px !important;
+}
+
 /* ========================================
    Site Footer
    ======================================== */
