refactor: standardize Amazon affiliate parameter naming
- Change amazonJpAffiliate to amazonJPAffiliate in params.yaml
- Update shortcode template to use consistent parameter name
- Improve naming consistency across configuration and templates

--- a/layouts/shortcodes/amazon.html
+++ b/layouts/shortcodes/amazon.html
@@ -2,7 +2,7 @@
 {{ $amazonCSS := resources.Get "css/amazon.css" | resources.Minify }}
 <link rel="stylesheet" href="{{ $amazonCSS.RelPermalink }}">
 
-{{- $tag := .Site.Params.amazonJpAffiliate -}}
+{{- $tag := .Site.Params.amazonJPAffiliate -}}
 {{- $asin := .Get "asin" -}}
 {{- $title := .Get "title" -}}
 
